# RGBD-CircularPoseEstimation

./: .gitignore  L515_DataCapture.py  README.md  RGBDPose.py  build_essential_tools.sh  main.py  run_tmp_bash.sh  setup.py  setup_linux.py  test_ellipse_funs.py  test_ellipse_gmm.py  test_plane.py
AUBOControler/: robotcontrol.py
ELSD/include/: elsd.h  write_svg.h
ELSD/src/: elsd.cc  process_curve.cc  process_line.cc  valid_curve.cc  write_svg.cc
ElpPy/: ElpPy.pyx  dataproc.py  eval.py  setup.py  utils.py
ElpPy/apriltags_rgbd/: LM_minimize.py  rgb_depth_fuse.py  rigid_transform.py  transformation.py
ElpPy/cpps/: ElpCvt.cpp  eval.cpp  (+6 more)
LSD/: CMakeLists.txt
LSD/include/: lsd.h
LSD/src/: lsd.cpp  main.cpp
MaskRCNN/: coco_eval.py  coco_utils.py  dataloader.py  engine.py  model.py  test.py  test_circlepose.py  train.py  train_circlepose.py  utils.py
NDICalibration/: test_plane_circle.py
PoseLabel/: ImageView.py  LabelWindow.py  README.md  Shapes.py  label_utils.py  run_label.py  test_qt.py
blender/: generate_data.py  simulator.blend
cpp/: CalculateOverlap.cpp  ELPShape2Equation.cpp  FitCircle.cpp  GetCirclePos.cpp  MeasureTools.h  cpp_tools.pyx  fasterCalculateOverlap.cpp
functions_test/: test_ANEF.py  test_blender_gt.py  test_blender_rgbd.py  test_dataloader.py  test_label_json.py  test_labeled_shape.py  test_show_mask.py
tools/: L515_rgbd_extractor.py  RGBDPose.py  add_noise2rgbd.py  convert_blendergt2fulldata.py  eval_poseFromFeaMatches.py  eval_poseFromFeaMatches_real.py  features_load.py  generateBasicFeatures.py  generate_AAMEDPixels.py  generate_blendergt2masks.py  generate_gauss_noise.py  generate_rgb2masks.py  method_npz2mat.py  motion_control.py  proc_ELSD.py  proc_FeaMatches.py  proc_FeaMatches_real.py  proc_Harris.py  proc_LSD.py  realsense_expand.py  record_error_distance.py  show_FeaMatches.py  show_estpose.py  start_calPoseFromFeaMatches.py  start_calPoseFromFeaMatches_real.py
(+17 files in other folders)
